syntax = "proto3";

package types.v1;

option go_package = "github.com/synapsecns/sanguine/services/scribe/grpc/types;pbscribe";

import "types/v1/types.proto";

message Log {
  Address address = 1;
  repeated Hash topics = 2;
  bytes data = 3;
  uint64  block_number = 4;
  Hash tx_hash = 5;
  uint64 tx_index = 6;
  Hash block_hash = 7;
  uint64  index = 8;
  bool  removed = 9;
}
